add more paremeter to increase PermSize and support remote debugging