@@ -117,6 +117,10 @@
                 <configuration>
                     <path>/${project.build.finalName}</path>
                     <contextReloadable>true</contextReloadable>
+                    <systemProperties>
+                        <JAVA_OPTS>-Xmx1024m -Xms256m -XX:MaxPermSize=256m -Xdebug -Xnoagent -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000</JAVA_OPTS>
+                    </systemProperties>
+
                 </configuration>
             </plugin>
 
